--- a/cs1520/2019-treat-yo-self-liy64-master/requirements.txt
+++ b/cs1520/2019-treat-yo-self-liy64-master/requirements.txt
@@ -2,7 +2,8 @@ Click==7.0
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
 itsdangerous==1.1.0
-Jinja2==2.10
+#Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.0
 SQLAlchemy==1.2.13
 Werkzeug==0.14.1
