--- a/cs1520/2019-treat-yo-self-liy64-master/requirements.txt
+++ b/cs1520/2019-treat-yo-self-liy64-master/requirements.txt
@@ -5,6 +5,7 @@ itsdangerous==1.1.0
 #Jinja2==2.10
 Jinja2>=2.10.1
 MarkupSafe==1.0
-SQLAlchemy==1.2.13
+#SQLAlchemy==1.2.13
+SQLAlchemy>=1.3.0
 #Werkzeug==0.14.1
 werkzeug>=0.15.3
